--- a/classes/_lib_d4c_.previoustaskerror.html
+++ b/classes/_lib_d4c_.previoustaskerror.html
@@ -114,7 +114,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/f30b73c/src/lib/D4C.ts#L44">src/lib/D4C.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/4ec1b47/src/lib/D4C.ts#L49">src/lib/D4C.ts:49</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -221,6 +221,12 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="../modules/_lib_d4c_.html#qconcurrency" class="tsd-kind-icon">QConcurrency</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="../modules/_lib_d4c_.html#concurrent" class="tsd-kind-icon">concurrent</a>
+					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_lib_d4c_.html#synchronized" class="tsd-kind-icon">synchronized</a>
 					</li>
