--- a/modules/_index_.html
+++ b/modules/_index_.html
@@ -72,6 +72,8 @@
 							<h3>References</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_index_.html#d4c" class="tsd-kind-icon">D4C</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_index_.html#qconcurrency" class="tsd-kind-icon">QConcurrency</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_index_.html#concurrent" class="tsd-kind-icon">concurrent</a></li>
 								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_index_.html#synchronized" class="tsd-kind-icon">synchronized</a></li>
 							</ul>
 						</section>
@@ -84,6 +86,16 @@
 					<a name="d4c" class="tsd-anchor"></a>
 					<h3>D4C</h3>
 					Re-exports <a href="../classes/_lib_d4c_.d4c.html">D4C</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-module">
+					<a name="qconcurrency" class="tsd-anchor"></a>
+					<h3>QConcurrency</h3>
+					Re-exports <a href="_lib_d4c_.html#qconcurrency">QConcurrency</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-module">
+					<a name="concurrent" class="tsd-anchor"></a>
+					<h3>concurrent</h3>
+					Re-exports <a href="_lib_d4c_.html#concurrent">concurrent</a>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-module">
 					<a name="synchronized" class="tsd-anchor"></a>
@@ -110,6 +122,12 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-reference tsd-parent-kind-module">
 						<a href="_index_.html#d4c" class="tsd-kind-icon">D4C</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-module">
+						<a href="_index_.html#qconcurrency" class="tsd-kind-icon">QConcurrency</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-module">
+						<a href="_index_.html#concurrent" class="tsd-kind-icon">concurrent</a>
 					</li>
 					<li class=" tsd-kind-reference tsd-parent-kind-module">
 						<a href="_index_.html#synchronized" class="tsd-kind-icon">synchronized</a>
