--- a/enums/_lib_d4c_.errmsg.html
+++ b/enums/_lib_d4c_.errmsg.html
@@ -74,12 +74,14 @@
 						<section class="tsd-index-section ">
 							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#classandmethoddecoratorsincompatible" class="tsd-kind-icon">Class<wbr>And<wbr>Method<wbr>Decorators<wbr>Incompatible</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#instanceinvalidtag" class="tsd-kind-icon">Instance<wbr>Invalid<wbr>Tag</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidclassparameter" class="tsd-kind-icon">Invalid<wbr>Class<wbr>Parameter</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidclassdecoratorparameter" class="tsd-kind-icon">Invalid<wbr>Class<wbr>Decorator<wbr>Parameter</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invaliddecoratoroption" class="tsd-kind-icon">Invalid<wbr>Decorator<wbr>Option</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidqueueconcurrency" class="tsd-kind-icon">Invalid<wbr>Queue<wbr>Concurrency</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidqueuetag" class="tsd-kind-icon">Invalid<wbr>Queue<wbr>Tag</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#missingthisduebindissue" class="tsd-kind-icon">Missing<wbr>This<wbr>Due<wbr>Bind<wbr>Issue</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#twodecoratorsincompatible" class="tsd-kind-icon">Two<wbr>Decorators<wbr>Incompatible</a></li>
 							</ul>
 						</section>
 					</div>
@@ -88,22 +90,32 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Enumeration members</h2>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="classandmethoddecoratorsincompatible" class="tsd-anchor"></a>
+					<h3>Class<wbr>And<wbr>Method<wbr>Decorators<wbr>Incompatible</h3>
+					<div class="tsd-signature tsd-kind-icon">Class<wbr>And<wbr>Method<wbr>Decorators<wbr>Incompatible<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;ClassAndMethodDecoratorsIncompatible&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/4ec1b47/src/lib/D4C.ts#L37">src/lib/D4C.ts:37</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="instanceinvalidtag" class="tsd-anchor"></a>
 					<h3>Instance<wbr>Invalid<wbr>Tag</h3>
 					<div class="tsd-signature tsd-kind-icon">Instance<wbr>Invalid<wbr>Tag<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;instanceInvalidTag: it should be string/symbol/undefined&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/f30b73c/src/lib/D4C.ts#L31">src/lib/D4C.ts:31</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/4ec1b47/src/lib/D4C.ts#L31">src/lib/D4C.ts:31</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="invalidclassparameter" class="tsd-anchor"></a>
-					<h3>Invalid<wbr>Class<wbr>Parameter</h3>
-					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Class<wbr>Parameter<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidClassParameter&quot;</span></div>
+					<a name="invalidclassdecoratorparameter" class="tsd-anchor"></a>
+					<h3>Invalid<wbr>Class<wbr>Decorator<wbr>Parameter</h3>
+					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Class<wbr>Decorator<wbr>Parameter<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidClassDecoratorParameter&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/f30b73c/src/lib/D4C.ts#L35">src/lib/D4C.ts:35</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/4ec1b47/src/lib/D4C.ts#L35">src/lib/D4C.ts:35</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -113,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Decorator<wbr>Option<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;not valid option when using decorators&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/f30b73c/src/lib/D4C.ts#L32">src/lib/D4C.ts:32</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/4ec1b47/src/lib/D4C.ts#L32">src/lib/D4C.ts:32</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -123,7 +135,7 @@
 					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Queue<wbr>Concurrency<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidQueueConcurrency&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/f30b73c/src/lib/D4C.ts#L33">src/lib/D4C.ts:33</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/4ec1b47/src/lib/D4C.ts#L33">src/lib/D4C.ts:33</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -133,7 +145,7 @@
 					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Queue<wbr>Tag<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidQueueTag&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/f30b73c/src/lib/D4C.ts#L34">src/lib/D4C.ts:34</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/4ec1b47/src/lib/D4C.ts#L34">src/lib/D4C.ts:34</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -143,7 +155,17 @@
 					<div class="tsd-signature tsd-kind-icon">Missing<wbr>This<wbr>Due<wbr>Bind<wbr>Issue<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;missingThisDueBindIssue&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/f30b73c/src/lib/D4C.ts#L36">src/lib/D4C.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/4ec1b47/src/lib/D4C.ts#L38">src/lib/D4C.ts:38</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="twodecoratorsincompatible" class="tsd-anchor"></a>
+					<h3>Two<wbr>Decorators<wbr>Incompatible</h3>
+					<div class="tsd-signature tsd-kind-icon">Two<wbr>Decorators<wbr>Incompatible<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;TwoDecoratorsInCompatible&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/4ec1b47/src/lib/D4C.ts#L36">src/lib/D4C.ts:36</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -171,10 +193,13 @@
 						<a href="_lib_d4c_.errmsg.html" class="tsd-kind-icon">Err<wbr>Msg</a>
 						<ul>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="_lib_d4c_.errmsg.html#classandmethoddecoratorsincompatible" class="tsd-kind-icon">Class<wbr>And<wbr>Method<wbr>Decorators<wbr>Incompatible</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="_lib_d4c_.errmsg.html#instanceinvalidtag" class="tsd-kind-icon">Instance<wbr>Invalid<wbr>Tag</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="_lib_d4c_.errmsg.html#invalidclassparameter" class="tsd-kind-icon">Invalid<wbr>Class<wbr>Parameter</a>
+								<a href="_lib_d4c_.errmsg.html#invalidclassdecoratorparameter" class="tsd-kind-icon">Invalid<wbr>Class<wbr>Decorator<wbr>Parameter</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="_lib_d4c_.errmsg.html#invaliddecoratoroption" class="tsd-kind-icon">Invalid<wbr>Decorator<wbr>Option</a>
@@ -188,6 +213,9 @@
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="_lib_d4c_.errmsg.html#missingthisduebindissue" class="tsd-kind-icon">Missing<wbr>This<wbr>Due<wbr>Bind<wbr>Issue</a>
 							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="_lib_d4c_.errmsg.html#twodecoratorsincompatible" class="tsd-kind-icon">Two<wbr>Decorators<wbr>Incompatible</a>
+							</li>
 						</ul>
 					</li>
 				</ul>
@@ -197,6 +225,12 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-module">
 						<a href="../classes/_lib_d4c_.previoustaskerror.html" class="tsd-kind-icon">Previous<wbr>Task<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="../modules/_lib_d4c_.html#qconcurrency" class="tsd-kind-icon">QConcurrency</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="../modules/_lib_d4c_.html#concurrent" class="tsd-kind-icon">concurrent</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_lib_d4c_.html#synchronized" class="tsd-kind-icon">synchronized</a>
